@@ -1,3 +1,11 @@
+2007-07-24  Benoit Sigoure  <tsuna@lrde.epita.fr>
+
+	Don't hardcord -pthread on OSX.
+	AX_BOOST_THREAD should use AX_BOOST instead of attempting a wild
+	guess based on $build_os.
+	* ax_boost.m4 (AX_BOOST_THREAD),
+	* ax_boost_thread.m4 (AX_BOOST): Here.
+
 2007-07-16  Guillaume Deslandes  <deslandes@gostai.com>
 
 	* output-to-dot: New.
